--- a/careers.html
+++ b/careers.html
@@ -15,13 +15,13 @@
         <div class="container">
             <nav class="navbar">
                 <a href="index.html" class="logo">
-                    <img src="images/astrosoft-logo.png" alt="AstrosoftTech Logo">
+                    <img src="images/clients/LOGO.png" alt="AstrosoftTech Logo">
                 </a>
                 
                 <div class="nav-links">
                     <a href="index.html" class="nav-link">Home</a>
                     <a href="services.html" class="nav-link">Services</a>
-                    <a href="portfolio.html" class="nav-link">Portfolio</a>
+
                     <a href="careers.html" class="nav-link active">Careers</a>
                     <a href="about.html" class="nav-link">About Us</a>
                     <a href="blog.html" class="nav-link">Blog</a>
@@ -46,13 +46,12 @@
     <!-- Mobile Menu -->
     <div class="mobile-menu">
         <div class="mobile-menu-header">
-            <img src="images/astrosoft-logo.png" alt="AstrosoftTech Logo">
+            <img src="images/clients/LOGO.png" alt="AstrosoftTech Logo">
             <button class="close-menu">&times;</button>
         </div>
         <div class="mobile-menu-links">
             <a href="index.html" class="mobile-nav-link">Home</a>
             <a href="services.html" class="mobile-nav-link">Services</a>
-            <a href="portfolio.html" class="mobile-nav-link">Portfolio</a>
             <a href="careers.html" class="mobile-nav-link active">Careers</a>
             <a href="about.html" class="mobile-nav-link">About Us</a>
             <a href="blog.html" class="mobile-nav-link">Blog</a>
@@ -197,25 +196,25 @@
                 
                 <div class="culture-gallery">
                     <div class="gallery-item main-item">
-                        <img src="images/culture/team-1.jpg" alt="Team working together">
+                        <img src="images/clients/office culture.png"alt="Team working together">
                         <div class="gallery-overlay">
                             <i class="fas fa-expand"></i>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/culture/office-1.jpg" alt="Modern office space">
+                        <img src="images/clients/office space.png" alt="Modern office space">
                         <div class="gallery-overlay">
                             <i class="fas fa-expand"></i>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/culture/event-1.jpg" alt="Team event">
+                        <img src="images/clients/carrer1.png" alt="Team event">
                         <div class="gallery-overlay">
                             <i class="fas fa-expand"></i>
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="images/culture/workshop-1.jpg" alt="Learning workshop">
+                        <img src="images/clients/culture work.png" alt="Learning workshop">
                         <div class="gallery-overlay">
                             <i class="fas fa-expand"></i>
                         </div>
@@ -643,7 +642,7 @@
             <div class="footer-grid">
                 <div class="footer-col footer-about">
                     <div class="footer-logo">
-                        <img src="images/astrosoft-logo.png" alt="AstrosoftTech Logo">
+                        <img src="images/clients/LOGO.png" alt="AstrosoftTech Logo">
                     </div>
                     <p class="footer-about-text">AstrosoftTech is a leading software development company delivering innovative digital solutions since 2011.</p>
                     <div class="footer-social">
@@ -978,6 +977,12 @@
                 slideInterval = setInterval(nextSlide, 5000);
             });
         });
+
+        (function() {
+    const savedTheme = localStorage.getItem('theme') || 
+                      (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+    document.documentElement.setAttribute('data-theme', savedTheme);
+  })();
     </script>
 </body>
 </html>
